# Omega

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  package.xml
config/: config.yaml  config_robot.yaml  config_simulation.yaml
include/omega/: arm.h  ball_tracker.h  camera.h  config.h  debugger.h  differentiable.h  gripper.h  kalman.h  omega.h  robot_tracker.h  timer.h  wheels.h
launch/: omega.launch  start_core.launch  start_robot.launch  start_simulation.launch
resource/: find_range.py  opencv_filter.py  save.py  test_vision.py
src/: arm.cpp  ball_tracker.cpp  camera.cpp  config.cpp  debugger.cpp  gripper.cpp  omega.cpp  robot_tracker.cpp  timer.cpp  wheels.cpp
