<?xml version="1.0"?>
<package format="2">
  <name>omega</name>
  <version>0.0.0</version>
  <description>Robot for TurtleBot Chellenge 2023</description>

  <maintainer email="k.sovailo@gmail.com">Kyrylo</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Runtime dependencies -->
  <exec_depend>tuda_turtlebot3_gazebo</exec_depend>
  <exec_depend>image_view</exec_depend>
</package>